--- a/js/package.json
+++ b/js/package.json
@@ -10,6 +10,7 @@
     "@solana/spl-token": "^0.1.6",
     "@solana/web3.js": "^1.20.2",
     "autoprefixer": "^9",
+    "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
     "borsh": "^0.4.0",
     "core-js": "^3.6.5",
