--- a/js/package.json
+++ b/js/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@project-serum/sol-wallet-adapter": "^0.2.5",
     "@solana/spl-token": "^0.1.6",
     "@solana/web3.js": "^1.20.2",
     "autoprefixer": "^9",
